Check pointer before dereferencing

BUG:445329
(cherry picked from commit ea9b990aeb3b649a69f8a670dc6398668ce8b5fe)